--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -106,14 +106,22 @@
                 написал Михаил Вербицкий, а слова Павел Чубинский. Гимн утверждён 15 января 1992, современный текст
                 утверждён 6 марта 2003 года.
             </p>
+            <div class="gims2">
+                <p>Ще не вмерла України і слава, і воля,</p>
+                <p>Ще нам, браття молодії, усміхнеться доля.</p>
+                <p>Згинуть наші воріженьки, як роса на сонці.</p>
+                <p>Запануєм i ми, браття, у своїй сторонці.</p>
+<br>
+                <p>Душу й тіло ми положим за нашу свободу,</p>
+                <p>І покажем, що ми, браття, козацького роду.</p>
+            </div>
             <br>
 
             <div class="terd">
                 <div class="trf">
                     <audio controls>
 
-                        <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
-                            type="audio/mpeg">
+                        <source src="Гимны - Гимн Украины (www.hotplayer.ru).mp3" type="audio/mpeg">
                         Тег audio не поддерживается вашим браузером.
                     </audio>
                 </div>
