--- a/country/russia/constitution/index.html
+++ b/country/russia/constitution/index.html
@@ -71,27 +71,13 @@
             </p>
             <hr>
             <p class="constitution">
-                Мы, многонациональный народ Российской Федерации,
-                <br>
-                соединенные общей судьбой на своей земле,
-                <br>
-                утверждая права и свободы человека, гражданский мир и согласие,
-                <br>
-                сохраняя исторически сложившееся государственное единство,
-                <br>
-                исходя из общепризнанных принципов равноправия и самоопределения народов,
-                <br>
-                чтя память предков, передавших нам любовь и уважение к Отечеству, веру в добро и справедливость,
-                <br>
-                возрождая суверенную государственность России и утверждая незыблемость ее демократической основы,
-                <br>
-                стремясь обеспечить благополучие и процветание России,
-                <br>
-                исходя из ответственности за свою Родину перед нынешним и будущими поколениями,
-                <br>
-                сознавая себя частью мирового сообщества,
-                <br>
-                принимаем КОНСТИТУЦИЮ РОССИЙСКОЙ ФЕДЕРАЦИИ.
+                Мы, многонациональный народ Российской Федерации, соединенные общей судьбой на своей земле, утверждая
+                права и свободы человека, гражданский мир и согласие, сохраняя исторически сложившееся государственное
+                единство, исходя из общепризнанных принципов равноправия и самоопределения народов, чтя память предков,
+                передавших нам любовь и уважение к Отечеству, веру в добро и справедливость, возрождая суверенную
+                государственность России и утверждая незыблемость ее демократической основы, стремясь обеспечить
+                благополучие и процветание России, исходя из ответственности за свою Родину перед нынешним и будущими
+                поколениями, сознавая себя частью мирового сообщества, принимаем КОНСТИТУЦИЮ РОССИЙСКОЙ ФЕДЕРАЦИИ.
             </p>
             <h2>РАЗДЕЛ ПЕРВЫЙ</h2>
             <h3>ГЛАВА 1. <br> ОСНОВЫ КОНСТИТУЦИОННОГО СТРОЯ</h3>
