--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -116,7 +116,7 @@
 
 
             <div class="president">
-                <h2>Фотографии Гербов Российской Федерации
+                <h2>Фотографии Гербов России
 
                 </h2>
 
@@ -142,7 +142,7 @@
                     <figcaption>Малый Герб Российской Империи </figcaption>
                 </div>
 
-                <h3>Государственный герб Союза Советских Социалистических Республик</h3>
+                <h3>Государственный герб Союза Советских Социалистических Республик и Российской Советской Федеративной Социалистической Республики</h3>
                 <div class="medvedev">
                     <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="pres">
                     <figcaption>Герб СССР</figcaption>
@@ -221,7 +221,7 @@
                 общий свод которых называется флажным протоколом.
             </p>
             <div class="imperia">
-                <h2>Фотографии Флагов Российской Федерации
+                <h2>Фотографии Флагов России
 
                 </h2>
                 <h3>Государственный флаг Русского государства</h3>
@@ -239,7 +239,7 @@
                     <img src="flag-of-Russian-Empire.png" alt="" class="pres">
                     <figcaption>Гербовый флаг Российской империи </figcaption>
                 </div>
-                <h3>Государственный флаг Союза Советских Социалистических Республик</h3>
+                <h3>Государственный флаг Союза Советских Социалистических Республик и Российской Советской Федеративной Социалистической Республики</h3>
                 <div class="medvedev">
                     <img src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="pres">
                     <figcaption>Флаг СССР </figcaption>
@@ -327,7 +327,7 @@
                         <a href="anthem-instrumental.mp3">Скачайте
                             музыку</a>.
                     </audio>
-                    <br>
+               
                     <br>
                     <h3>Гимн России хор</h3>
                     <div class="kiol">
@@ -338,7 +338,12 @@
                                 музыку</a>.
                         </audio>
                     </div>
+                    <h3>Гимн СССР</h3>
+                    <div>
+                        <audio src="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3" controls></audio>
+                    </div>
                 </div>
+                <br>
                 <h2 id="Символ_Российского_рубля">Символ Российского рубля &#8381;</h2>
                 <hr>
 
