--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                 <div class="col-sm">
                     <hr>
                     &copy; 2020-2021 ООО "СССР"
+                    <p><a href="/o-windows/">Windows</a></p>
+                    <br>
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
