--- a/country/russia/constitution/index.html
+++ b/country/russia/constitution/index.html
@@ -878,7 +878,11 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-
+                <div class="col-sm country">
+                    <hr>
+                    <iframe src="https://yandex.ru/covid19/stat/widget/light/?geoId=225" width=100% height=200
+                        frameborder="0"></iframe>
+                </div>
                 <div class="col-sm country">
                     <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
@@ -891,6 +895,7 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
 
                 </div>
+
                 <div class="col-sm country gimn">
                     <hr>
 
