--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -404,17 +404,19 @@
             <script type="text/javascript">
                 VK.Widgets.Like("vk_like", { type: "button" });
             </script>
-            <hr>
+
             <div class="row">
 
 
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -422,8 +424,13 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-
                 <div class="col-sm country">
+                    <hr>
+                    <iframe src="https://yandex.ru/covid19/stat/widget/light/?geoId=225" width=100% height=200
+                        frameborder="0"></iframe>
+                </div>
+                <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -435,6 +442,7 @@
 
                 </div>
                 <div class="col-sm country">
+                    <hr>
                     <p><a href="/political-na-postsovet-space/country/ussr/"><img
                                 src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" class="fr" alt=""></a>
                     </p>
@@ -451,7 +459,7 @@
 
                 </div>
 
-
+<hr>
             </div>
 
             <br>
