--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 отдаляется от России. Они думают что под США им будет лучше, но это не так.
             </p>
 
-            <iframe src="https://datalens.yandex/tat4enkerl0ap?_embedded=1&_theme=dark" width="100%" height="400"
-                frameborder="0"></iframe>
+            <iframe src="https://yandex.ru/covid19/stat/widget/default/?geoId=10000" width=100% height=600 frameborder="0"></iframe>
+    
 
 
             <hr>
