--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -63,8 +63,7 @@
         </div>
     </header>
     <main>
-        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
-            frameborder="0"></iframe>
+        
         <div class="container">
             <h1>Государственные символы России</h1>
             <hr>
@@ -496,7 +495,10 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-
+                <div class="col-sm country">
+                    <hr>
+                    <iframe src="https://yandex.ru/covid19/stat/widget/light/?geoId=225" width=100% height=200 frameborder="0"></iframe>
+                </div>
                 <div class="col-sm country">
                     <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
