--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -60,8 +60,7 @@
         </div>
     </header>
     <main>
-        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
-            frameborder="0"></iframe>
+     
         <div class="container">
             <h1>Президент Российской Федерации</h1>
             <hr>
@@ -699,6 +698,11 @@
                     <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
+                </div>
+                <div class="col-sm country">
+                    <hr>
+                    <iframe src="https://yandex.ru/covid19/stat/widget/light/?geoId=225" width=100% height=200
+                        frameborder="0"></iframe>
                 </div>
                 <div class="col-sm country">
                     <hr>
