--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -133,9 +133,10 @@
     </main>
     <footer>
         <div class="container">
-            <hr>
+        
             <div class="row">
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
@@ -150,6 +151,7 @@
                     <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -157,8 +159,13 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
+                <div class="col-sm country">
+                    <hr>
+                    <iframe src="https://yandex.ru/covid19/stat/widget/light/?geoId=187" width=100% height=170 frameborder="0"></iframe>
+                </div>
 
                 <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -169,6 +176,7 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country">
+                    <hr>
                     <p><a href="/political-na-postsovet-space/country/ukraine/"><img
                                 src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
                                 class="fr"></a></p>
