--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -68,9 +68,8 @@
                 <h2>Поддержать</h2>
                 <hr>
 
-
                 <iframe
-                    src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=https%3A%2F%2Fruzaharsu.github.io%2Fpolitical-na-postsovet-space%2Ffor-users%2Fcontacts%2F&quickpay=shop&account=4100116439287320"
+                    src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B5%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=11&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=https%3A%2F%2Fruzaharsu.github.io%2Fpolitical-na-postsovet-space%2F&quickpay=shop&account=4100116774485382"
                     width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
                 <br><br>
             </div>
