--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
             <div class="row">
                 <div class="col-sm">
                     <hr>
-                    &copy; 2020-2021 ООО "СССР"
+                   <p>&copy; 2020-2021 ООО "СССР"</p>
                     <p><a href="/o-windows/">Windows</a></p>
+                    <p><a href="/russia/">Российская Федерация</a></p>
                     <br>
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
