--- a/country/index.html
+++ b/country/index.html
@@ -110,7 +110,7 @@
                                         alt="" class="flagi"> </a><a href="#Казахстан"><img
                                         src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png"
                                         alt="" class="flagi"></a> <a href="#Россия"> <img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt=""
+                                        src="/russia/gos-simvolika/flag.svg" alt=""
                                         class="flagi"></a> <a href="#Украина"><img
                                         src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
                                         class="flagi"></a></td>
@@ -255,21 +255,21 @@
                             </td>
                             <td>Москва</td>
 
-                            <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/#герб"><img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                            <td><a href="/russia/gos-simvolika/#герб"><img
+                                        src="/russia/gos-simvolika/gerb-of-Russia.png"
                                         alt="" class="gerbs"></a>
                                 <hr>
-                                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/#флаг"><img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                <a href="/russia/gos-simvolika/#флаг"><img
+                                        src="/russia/gos-simvolika/flag-of-Russia.png"
                                         alt="" class="gerbs"></a>
                             </td>
                             <td style="text-align: center;"><a
-                                    href="/political-na-postsovet-space/country/russia/gos-simvolika/#герб"><img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
+                                    href="/russia/gos-simvolika/#герб"><img
+                                        src="/russia/gos-simvolika/gerb-of-RSFSR.png"
                                         alt="" class="gerbs"></a>
                                 <hr>
-                                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/#флаг"><img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"
+                                <a href="/russia/gos-simvolika/#флаг"><img
+                                        src="/russia/gos-simvolika/flag-of-RSFSR.png"
                                         alt="" class="gerbs"></a>
                             </td>
                             <td>12 декабря 1991</td>
@@ -289,9 +289,9 @@
                                 <p>
                                     1 ноября 1991 — Съезд народных депутатов РСФСР внёс поправки в Конституцию РСФСР и,
                                     среди прочего, изменил российский флаг — <img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"
+                                        src="/russia/gos-simvolika/flag-of-Russia-before-1993.png"
                                         alt="" class="flagi"> <b><a
-                                            href="/political-na-postsovet-space/country/russia/">
+                                            href="/russia/">
                                             Российская Советская Федеративная Социалистическая Республика</a></b>.
                                 </p>
                                 <p>
@@ -309,7 +309,7 @@
                                 </p>
                                 <p>
                                     25 декабря 1991 — Верховный Совет РСФСР принял закон об изменении названия
-                                    государства с <b> <a href="/political-na-postsovet-space/country/russia/">
+                                    государства с <b> <a href="/russia/">
                                             Российская Советская Федеративная Социалистическая Республика
                                         </a> </b> на
                                     <b><a href="/political-na-postsovet-space/country/russia/"> Российская
@@ -321,7 +321,7 @@
                                 </p>
                                 <p>
                                     11 декабря 1993 — изменён российский флаг: <img
-                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                        src="/russia/gos-simvolika/flag-of-Russia.png"
                                         alt="" class="flagi"> <b>Российская Федерация (Россия)</b>.
                                 </p>
                                 <p>
@@ -519,7 +519,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>Российская Федерация 🇷🇺 </h4>
-                        <img src="russia/president/Vladimir_Putin_17_July_2000-1.jpg" alt="" class="pres">
+                        <img src="/russia/president/Vladimir_Putin_17_July_2000-1.jpg" alt="" class="pres">
                         <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
                         </figcaption>
                         <br>
