--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -124,9 +124,9 @@
                         Игры
                     </b>
                     <ol>
-                        <li>Мы разрабатываем простые <a href="/games/" class="sos">web-игры</a> про политику.
+                        <li>Мы разрабатываем простые <a href="/games/" class="sos">web-игры</a> .
                             <br>
-                            <b>Внимание!!! Данные игры являются игровым сюжетом. Совпадения с реальной жизнью случайны.
+                            <b>Внимание!!! Некоторые игры являются игровым сюжетом. Совпадения с реальной жизнью случайны.
                             </b>
 
                         </li>
