--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                    <p>&copy; 2020-2021 ООО "СССР"</p>
                     <p><a href="/o-windows/">Windows</a></p>
                     <p><a href="/russia/">Российская Федерация</a></p>
+                    <p><a href="/games/">Игры СССР</a></p>
                     <br>
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
@@ -132,7 +133,7 @@
                                 src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
                                 alt="" class="fr"> Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"><img
-                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                src="/russia/gos-simvolika/emblem_gold.svg"
                                 alt="" class="fr"> Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/"><img
                                 src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
