--- a/country/index.html
+++ b/country/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="ussr/gerb-of-USSR.png" image="/x-icon">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Страны | Постсоветское пространство</title>
