--- a/index.html
+++ b/index.html
@@ -94,21 +94,7 @@
                     <p><a href="/russia/">Российская Федерация</a></p>
                     <p><a href="/games/">Игры СССР</a></p>
                     <br>
-                    <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
-                    </div>
-                    <!-- Put this script tag to the <head> of your page -->
-                    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-                    <script type="text/javascript">
-                        VK.init({ apiId: 7752244, onlyWidgets: true });
-                    </script>
-
-                    <!-- Put this div tag to the place, where the Like block will be -->
-                    <div id="vk_recommended"></div>
-                    <script type="text/javascript">
-                        VK.Widgets.Recommended("vk_recommended", { limit: 5, period: 'month', verb: 1 });
-                    </script>
+                    
                 </div>
                 <div class="col-sm">
                     <hr>
@@ -132,7 +118,7 @@
                     <p><a href="/political-na-postsovet-space/country/kazakhstan/"><img
                                 src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
                                 alt="" class="fr"> Казахстан</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/"><img
+                    <p><a href="/russia/"><img
                                 src="/russia/gos-simvolika/emblem_gold.svg"
                                 alt="" class="fr"> Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/"><img
@@ -147,22 +133,7 @@
 
                 </div>
                 <hr>
-                <div class="ya-site-form ya-site-form_inited_no"
-                    data-bem="{&quot;action&quot;:&quot;https://ruzaharsu.github.io/political-na-postsovet-space/admin&quot;,&quot;arrow&quot;:true,&quot;bg&quot;:&quot;#ffcc00&quot;,&quot;fontsize&quot;:14,&quot;fg&quot;:&quot;#000000&quot;,&quot;language&quot;:&quot;ru&quot;,&quot;logo&quot;:&quot;rw&quot;,&quot;publicname&quot;:&quot;Yandex Site Search #2459294&quot;,&quot;suggest&quot;:true,&quot;target&quot;:&quot;_blank&quot;,&quot;tld&quot;:&quot;ru&quot;,&quot;type&quot;:2,&quot;usebigdictionary&quot;:true,&quot;searchid&quot;:2459294,&quot;input_fg&quot;:&quot;#ffffff&quot;,&quot;input_bg&quot;:&quot;#343c50&quot;,&quot;input_fontStyle&quot;:&quot;normal&quot;,&quot;input_fontWeight&quot;:&quot;normal&quot;,&quot;input_placeholder&quot;:&quot;Поиск по рунету&quot;,&quot;input_placeholderColor&quot;:&quot;#ffffff&quot;,&quot;input_borderColor&quot;:&quot;#7f9db9&quot;}">
-                    <form action="https://yandex.ru/search/site/" method="get" target="_blank" accept-charset="utf-8">
-                        <input type="hidden" name="searchid" value="2459294" /><input type="hidden" name="l10n"
-                            value="ru" /><input type="hidden" name="reqenc" value="" /><input type="search" name="text"
-                            value="" /><input type="submit" value="Найти" />
-                    </form>
-                </div>
-                <style type="text/css">
-                    .ya-page_js_yes .ya-site-form_inited_no {
-                        display: none;
-                    }
-                </style>
-                <script
-                    type="text/javascript">(function (w, d, c) { var s = d.createElement('script'), h = d.getElementsByTagName('script')[0], e = d.documentElement; if ((' ' + e.className + ' ').indexOf(' ya-page_js_yes ') === -1) { e.className += ' ya-page_js_yes'; } s.type = 'text/javascript'; s.async = true; s.charset = 'utf-8'; s.src = (d.location.protocol === 'https:' ? 'https:' : 'http:') + '//site.yandex.net/v2.0/js/all.js'; h.parentNode.insertBefore(s, h); (w[c] || (w[c] = [])).push(function () { Ya.Site.Form.init() }) })(window, document, 'yandex_site_callbacks');</script>
-                <hr>
+            
             </div>
 
     </footer>
