--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -126,12 +126,18 @@
                     <ol>
                         <li>Мы разрабатываем простые <a href="/games/" class="sos">web-игры</a> .
                             <br>
-                            <b>Внимание!!! Некоторые игры являются игровым сюжетом. Совпадения с реальной жизнью случайны.
+                            <b>Внимание!!! Некоторые игры являются игровым сюжетом. Совпадения с реальной жизнью
+                                случайны.
                             </b>
 
                         </li>
                         <li>Играя в web-игры вы принимаете <a href="confidential/" class="sos">политику
-                                конфиденциальности</a></li>
+                                конфиденциальности</a>
+                        </li>
+                        <li>
+                            Игры имеют открытый имеют открытый исходный код и свободную лицензию использования. Для того чтобы посмотреть исходный код перейдите по
+                            <a target="_blank" href="https://github.com/ruzaharsu/games" class="sos">ссылке</a>.
+                        </li>
                     </ol>
                 </li>
                 <li>
@@ -139,10 +145,10 @@
                     <ol>
                         <li>У сайта есть Бета-версия, чтобы ее посмотреть перейдите по <a
                                 href="/political-na-postsovet-space/beta/" class="sos">Ссылке</a>.
-                            </li>
-                            <li>
-                                Вы тоже можете помочь с Бета-версией. Пишите ваши версии нам в Поддержку.
-                            </li>
+                        </li>
+                        <li>
+                            Вы тоже можете помочь с Бета-версией. Пишите ваши версии нам в Поддержку.
+                        </li>
                     </ol>
                 </li>
             </ol>
