--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -5,9 +5,9 @@
     <script language="JavaScript" type="text/javascript">
     
         function GoNah(){
-         location="https://ruzaharsu.github.io/russia";
+         location="/russia";
         }
-        setTimeout( 'GoNah()', 1);
+        setTimeout( 'GoNah()', 10000);
         
         </script>
     <!-- Yandex.Metrika counter -->
@@ -31,8 +31,8 @@
     <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/css/style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
+    <link rel="stylesheet" href="/russia/css/style.css">
+    <link rel="stylesheet" href="/russia/main-ru.css">
     <link rel="shortcut icon" href="/russia/gos-simvolika/emblem_gold.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
