--- a/putin/index.html
+++ b/putin/index.html
@@ -4,13 +4,13 @@
 <head>
     <!-- Yandex.Metrika counter -->
     <script language="JavaScript" type="text/javascript">
-    
-        function GoNah(){
-         location="https://ruzaharsu.github.io/political-na-postsovet-space";
+
+        function GoNah() {
+            location = "/political-na-postsovet-space";
         }
-        setTimeout( 'GoNah()', 10000);
-        
-        </script>
+        setTimeout('GoNah()', 10000);
+
+    </script>
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
@@ -45,17 +45,22 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/country/ussr/"><img
-                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/lnr/"><img
+                src="/political-na-postsovet-space/country/lnr/gos-simvolika/flag-of-Lnr.png" alt="" class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/kazakhstan/"> <img
+                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png" alt=""
+                class="rf-flags"></a>
         <a href="/political-na-postsovet-space/country/belarus/"> <img
                 src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png" alt=""
                 class="rf-flags"></a>
-        <a href="/political-na-postsovet-space/country/russia/"> <img
-                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt="" class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/ussr/"><img
+                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="rf-flags"></a>
+        <a href="/russia/"> <img src="/russia/gos-simvolika/flag.svg" alt="" class="rf-flags"></a>
         <a href="/political-na-postsovet-space/country/ukraine/"> <img
                 src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt="" class="rf-flags"></a>
 
-
+        <a href="/political-na-postsovet-space/country/dni/"><img
+                src="/political-na-postsovet-space/country/dni/gos-simvolika/flag-of-Dni.png" alt="" class="rf-flags"></a>
 
 
     </header>
